samples/_failures_safe/1761149754_4362eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9efe672.c: In function ‘main’:
./samples/SAFE/__tmp_c9efe672.c:169:38: error: expected ‘)’ at end of input
  169 |         if (!state_machine_transition
      |            ~                         ^
      |                                      )
./samples/SAFE/__tmp_c9efe672.c:169:9: error: expected declaration or statement at end of input
  169 |         if (!state_machine_transition
      |         ^~
./samples/SAFE/__tmp_c9efe672.c:169:9: error: expected declaration or statement at end of input
